cabal-version: 3.4
name: battleship
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Ilia Kopeshtianski
maintainer: lupusanay@gmail.com
build-type: Simple

common warnings
  ghc-options: -Wall

common deps
  build-depends:
    containers,
    transformers,
    text,
    QuickCheck

  default-extensions:
    BlockArguments
    PartialTypeSignatures
    MultiWayIf
    OverloadedStrings
    OverloadedRecordDot
    RecordWildCards
    ViewPatterns

library
  import: warnings, deps
  exposed-modules: Battleship
  build-depends: base ^>=4.20.0.0
  hs-source-dirs: src
  default-language: GHC2024

test-suite battleship-test
  import: warnings, deps
  default-language: GHC2024
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base ^>=4.20.0.0,
    battleship,
